--- a/_extensions/pset-598-599/_extension.yml
+++ b/_extensions/pset-598-599/_extension.yml
@@ -5,6 +5,14 @@ quarto-required: ">=1.8.0"
 contributes:
   formats:
     pdf:
-      toc: true
+      documentclass: article
+      cite-method: biblatex
+      keep-tex: true
+      fontsize: 12pt
+      geometry:
+        - margin=1in
+      date-format: long
       include-in-header: header.tex
-
+      colorlinks: false
+      template-partials:
+        - biblio-config.tex
